fixed text align

--- a/src/components/ContactUsSection/ContactUsSection.module.scss
+++ b/src/components/ContactUsSection/ContactUsSection.module.scss
@@ -22,7 +22,6 @@
     p {
       font-size: 1.5rem;
       margin: 3rem auto;
-      padding: 0rem 5rem;
     }
 
     @include medium {
